Issue #2229635 by johnv: Fixed Undefined index: entity_type in workflow_vbo_next_state_action().
Issue #2231903 by johnv: Fixed usage of field_info_field_map() under D7.22.
Issue #2168197 by johnv: Fixed support of VBO 'modify entity values' for workflow_field.
Issue #2102409 by johnv: Removed $workflow->getWorkfowItem() c.s., which is not needed anymore.
Issue #1649216 by johnv: Changed display of 'author' and 'creation' on admin pages, to avoid confusion when 'autor' role is defined. 
Issue #2019345 by johnv: Added error message when used workflow is deleted.
Issue #2237125 by johnv: Added token 'workflow-state-age' from workflow_extensions.
Issue #2237125 by johnv: Reordered functions in workflow.tokens.inc.
Issue #0907442 by johnv: Fixed comment field can now be hidden, optional and (new!) required.
Issue #2239189 by johnv: Fixed Anonymous author cannot set a state for new content.
Issue #2019345 by johnv: Removed workflownode.inc into workflownode.module.
Issue #2164081 by johnv: Some nervous code reshuffling regarding unpublished nodes.
Issue #2237361 by johnv: Fixed SQL error in node_access when Anonymous Author has workflow_access rights.
Issue #2240009 by johnv: Changed some code in workflow.tokens.inc, to prepare for multiple workflows per entity.
Issue #2019345 by johnv: Changed WorkflowState to an Entity, too.
Issue #2019345 by johnv: Added method getWorkflow() to WorkflowTransition class.
Issue #2241577 by johnv: Fixed export/import Features after making WorkflowState an entity.
Issue #2164081 by johnv: Removed code that hides Workflow Form on unpublished nodes.
Issue #2241577 by johnv: Removed dependency on Features module. Now you can enable a workflow feature without!
Issue #2217291: Added new view + view_mode 'history_tab', to create customizable tab, for multiple workflows.
Issue #0443094: Fixed typo in workflow_admin_paths_alter().
Issue #2241577 by preddy: Added check for existing workflow in WorkflowConfigTransition::save().